--- a/second.html
+++ b/second.html
@@ -8,5 +8,7 @@
 <body>
     <p>This is a new branch file.</p>
     <p>Adding this file to test new branch creation.</p>
+    <h1>Hello Feature</h1>
+
 </body>
 </html>
